--- a/_publications/2023-02-13-thesis.md
+++ b/_publications/2023-02-13-thesis.md
@@ -1,9 +1,8 @@
 ---
-title: "Strong Approximation for a Family of Quadratic Surfaces
-"
+title: 'Strong Approximation for a Family of Quadratic Surfaces'
 collection: publications
 permalink: /publication/2023-02-13-thesis
-excerpt: 'My master\'s thesis, about strong approximation and algebraic groups.'
+excerpt: "My master's thesis, about strong approximation and algebraic groups."
 date: 2023-02-13
 venue: ''
 paperurl: 'https://studenttheses.universiteitleiden.nl/handle/1887/3566547'
